Run job commands explicitly in the global enviroment (which can be modified with setenv -g) rather than with the environment tmux started with.

--- a/tmux.1
+++ b/tmux.1
@@ -1745,6 +1745,10 @@ the
 .Ic status-interval
 option: if the status line is redrawn in the meantime, the previous result is
 used.
+Shell commands are executed with the
+.Nm
+global environment set (see the
+.Sx ENVIRONMENT section).
 .Pp
 #[attributes] allows a comma-separated list of attributes to be specified,
 these may be
