--- a/tmux.1
+++ b/tmux.1
@@ -373,7 +373,6 @@ bind-key F1 set-window-option force-width 81
 .Pp
 Or if using
 .Xr sh 1 :
-.Pp
 .Bd -literal -offset indent
 $ tmux bind-key F1 set-window-option force-width 81
 .Ed
@@ -401,7 +400,6 @@ new-window ; split-window -d
 .Pp
 Or from
 .Xr sh 1 :
-.Pp
 .Bd -literal -offset indent
 $ tmux kill-window -t :1
 
@@ -1748,7 +1746,8 @@ used.
 Shell commands are executed with the
 .Nm
 global environment set (see the
-.Sx ENVIRONMENT section).
+.Sx ENVIRONMENT
+section).
 .Pp
 #[attributes] allows a comma-separated list of attributes to be specified,
 these may be
