--- a/TODO
+++ b/TODO
@@ -131,6 +131,8 @@
 - a binding to "scroll down and exit at bottom" copy mode
 - some way to pass keystrokes in copy mode through to underlying window
 - last window update time and # replacement for it for display-message
+- way to define bell etc colours in status line
+- find-window across sessions - other ways to make session handling easier?
 
 For 1.3 (not in order):
 
