Add a tiled layout, originally from Liam Bedford a while ago, fixed up by me.

--- a/tmux.1
+++ b/tmux.1
@@ -784,6 +784,9 @@ bottom along the right.
 See the
 .Em main-pane-width
 window option.
+.It Ic tiled
+Panes are spread out as evenly as possible over the window in both rows and
+columns.
 .El
 .Pp
 Commands related to windows and panes are as follows:
