--- a/tmux.1
+++ b/tmux.1
@@ -1265,7 +1265,7 @@ or
 keys, quotation marks are necessary, for example:
 .Bd -literal -offset indent
 bind-key '"' split-window
-bind-key "'" select-prompt
+bind-key "'" new-window
 .Ed
 .Pp
 Commands related to key bindings are as follows:
@@ -2316,10 +2316,6 @@ The format of
 is as for
 .Ic status-left ,
 with the exception that #() are not handled.
-.It Ic select-prompt Op Fl t Ar target-client
-Open a prompt inside
-.Ar target-client
-allowing a window index to be entered interactively.
 .El
 .Sh BUFFERS
 .Nm
