--- a/TODO
+++ b/TODO
@@ -154,5 +154,6 @@ For 1.3 (not in order):
 12 better configure? with-libevent
 13 fix binding multiple keys, C-M-Left C-M-Up etc
 14 bind commands to key sequences?
+15 socket should be group writable and ownership should be maintained
 ...
 
