Accept (and document) "none" instead of "default" for attributes as it is clearer and avoids confusion with default colours.

--- a/tmux.1
+++ b/tmux.1
@@ -1589,7 +1589,7 @@ This has no effect as a session option; it must be set as a global option.
 Set status line message attributes, where
 .Ar attributes
 is either
-.Ic default
+.Ic none
 or a comma-delimited list of one or more of:
 .Ic bright
 (or
