--- a/tmux.1
+++ b/tmux.1
@@ -2387,6 +2387,7 @@ Load the contents of the specified paste buffer from
 .It Xo Ic paste-buffer
 .Op Fl dr
 .Op Fl b Ar buffer-index
+.Op Fl s Ar separator
 .Op Fl t Ar target-pane
 .Xc
 .D1 (alias: Ic pasteb )
@@ -2396,10 +2397,13 @@ With
 .Fl d ,
 also delete the paste buffer from the stack.
 When output, any linefeed (LF) characters in the paste buffer are replaced with
-carriage returns (CR).
-This translation may be disabled with the
-.Fl r
+a separator, by default carriage return (CR).
+A custom separator may be specified using the
+.Fl s
 flag.
+The
+.Fl r
+flag means to do no replacement (equivalent to a separator of LF).
 .It Xo Ic save-buffer
 .Op Fl a
 .Op Fl b Ar buffer-index
