--- a/TODO
+++ b/TODO
@@ -158,5 +158,7 @@ For 1.3 (not in order):
 14 bind commands to key sequences?
 15 socket should be group writable and ownership should be maintained
 16 monitor, bell etc should monitor /all/ panes in the window not just one
+17 wd should be updated on attach etc. maybe lose default-path and use PWD
+18 a history of commands that can be reversed (reverse member of each command, and a buffer)
 ...
 
