Better to say "command key bindings" since we've just called them command keys.

--- a/tmux.1
+++ b/tmux.1
@@ -213,7 +213,7 @@ prefix key,
 .Ql C-b
 (Ctrl-b) by default, followed by a command key.
 .Pp
-The default key bindings are:
+The default command key bindings are:
 .Pp
 .Bl -tag -width "XXXXXXXXXX" -offset indent -compact
 .It C-b
