--- a/tmux.1
+++ b/tmux.1
@@ -2078,10 +2078,8 @@ Key bindings default to emacs.
 .Op Ic on | off
 .Xc
 Mouse state in modes.
-If on,
-.Nm
-will respond to mouse clicks by moving the cursor in copy mode or selecting an
-option in choice mode.
+If on, the mouse may be used to copy a selection by dragging in copy mode, or
+to select an option in choice mode.
 .Pp
 .It Xo Ic monitor-activity
 .Op Ic on | off
