--- a/TODO
+++ b/TODO
@@ -161,5 +161,6 @@ For 1.3 (not in order):
 17 wd should be updated on attach etc. maybe lose default-path and use PWD
 18 a history of commands that can be reversed (reverse member of each command, and a buffer)
 19 info() when changing to same window
+20 don't pass UTF-8 through vis for titles
 ...
 
