Add -n and -p flags to switch-client to move to the next and previous session (yes, it doesn't match window/pane, but so what, nor does switch-client).
Based on a diff long ago from "edsouza".

--- a/tmux.1
+++ b/tmux.1
@@ -660,6 +660,7 @@ Suspend a client by sending
 .Dv SIGTSTP
 (tty stop).
 .It Xo Ic switch-client
+.Op Fl np
 .Op Fl c Ar target-client
 .Op Fl t Ar target-session
 .Xc
@@ -668,6 +669,11 @@ Switch the current session for client
 .Ar target-client
 to
 .Ar target-session .
+If
+.Fl n
+or
+.Fl p
+is used, the client is moved to the next or previous session respectively.
 .El
 .Sh WINDOWS AND PANES
 A
