--- a/tmux.1
+++ b/tmux.1
@@ -1587,6 +1587,9 @@ Set the time in milliseconds for which
 waits after an escape is input to determine if it is part of a function or meta
 key sequences.
 The default is 500 milliseconds.
+.It Ic exit-unattached
+If enabled, the server will exit when there are no attached clients, rather
+than when there are no attached sessions.
 .It Ic quiet
 Enable or disable the display of various informational messages (see also the
 .Fl q
@@ -1659,6 +1662,9 @@ to work correctly, this
 be set to
 .Ql screen
 or a derivative of it.
+.It Ic destroy-unattached
+If enabled and the session is no longer attached to any clients, it is
+destroyed.
 .It Ic detach-on-destroy
 If on (the default), the client is detached when the session it is attached to
 is destroyed.
