Put "or" on new line from command with .Ic.

--- a/tmux.1
+++ b/tmux.1
@@ -2082,7 +2082,8 @@ will attempt - on supported platforms - to rename the window to reflect the
 command currently running in it.
 This flag is automatically disabled for an individual window when a name
 is specified at creation with
-.Ic new-window or
+.Ic new-window
+or
 .Ic new-session ,
 or later with
 .Ic rename-window .
