--- a/tmux.1
+++ b/tmux.1
@@ -248,6 +248,8 @@ Select windows 0 to 9.
 Enter the
 .Nm
 command prompt.
+.It ;
+Move to the previously active pane.
 .It =
 Choose which buffer to paste interactively from a list.
 .It \&?
@@ -1037,6 +1039,9 @@ option kills all but the pane given with
 Kill the current window or the window at
 .Ar target-window ,
 removing it from any sessions to which it is linked.
+.It Ic last-pane Op Fl t Ar target-window
+.D1 (alias: Ic lastp )
+Select the last (previously selected) pane.
 .It Ic last-window Op Fl t Ar target-session
 .D1 (alias: Ic last )
 Select the last (previously selected) window.
