Typo, from Rob Paisley.

--- a/tmux.1
+++ b/tmux.1
@@ -509,7 +509,7 @@ when they are created with the
 command, or later with the
 .Ic attach-session
 command.
-Each session has one of more windows
+Each session has one or more windows
 .Em linked
 into it.
 Windows may be linked to multiple sessions and are made up of one or
