Update man page for update-environment.

--- a/tmux.1
+++ b/tmux.1
@@ -2022,7 +2022,8 @@ was given to the
 .Ic set-environment
 command).
 The default is
-"DISPLAY WINDOWID SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION".
+"DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID
+XAUTHORITY".
 .It Xo Ic visual-activity
 .Op Ic on | off
 .Xc
