--- a/TODO
+++ b/TODO
@@ -155,4 +155,5 @@ For 1.4 (not in order):
 22 add a unique ever-increasing pane id to each pane, export it in $TMUX_PANE
    (as %1, %2 etc) and allow it to be used as a target
 23 way to add dest for break-pane; maybe some easier way to unbreak-pane
+24 case insensitive searching
 ...
