--- a/TODO
+++ b/TODO
@@ -164,5 +164,6 @@ For 1.4 (not in order):
 27 option to move status line to top
 28 "monitor for silence" option
 29 support "xterm2" mouse mode
+30 respawn-pane command
 ...
 
