Track the last session for a client and add a flag to switch-client and a key binding (L) to move a client back to its last session.

--- a/tmux.1
+++ b/tmux.1
@@ -282,6 +282,8 @@ Briefly display pane indexes.
 Force redraw of the attached client.
 .It s
 Select a new session for the attached client interactively.
+.It L
+Switch the attached client back to the last session.
 .It t
 Show the time.
 .It w
@@ -662,7 +664,7 @@ Suspend a client by sending
 .Dv SIGTSTP
 (tty stop).
 .It Xo Ic switch-client
-.Op Fl np
+.Op Fl lnp
 .Op Fl c Ar target-client
 .Op Fl t Ar target-session
 .Xc
@@ -672,10 +674,12 @@ Switch the current session for client
 to
 .Ar target-session .
 If
+.Fl l,
 .Fl n
 or
 .Fl p
-is used, the client is moved to the next or previous session respectively.
+is used, the client is moved to the last, next or previous session
+respectively.
 .El
 .Sh WINDOWS AND PANES
 A
