Fix BUFFERS section now they are global.

--- a/tmux.1
+++ b/tmux.1
@@ -2524,8 +2524,7 @@ with the exception that #() are not handled.
 .Sh BUFFERS
 .Nm
 maintains a stack of
-.Em paste buffers
-for each session.
+.Em paste buffers .
 Up to the value of the
 .Ic buffer-limit
 option are kept; when a new buffer is added, the buffer at the bottom of the
