--- a/TODO
+++ b/TODO
@@ -125,4 +125,5 @@
 - support "xterm2" mouse mode
 - respawn-pane command
 - configurable borders and empty space filler for when panes < window?
-
+- mouse-select-pane will screw up with !MODE_MOUSE_STANDARD (it sets the
+  flag on w/o checking the others before calling tty_update_mode)
