Add a -P option to new-window and split-window to print the new window or pane index in target form (useful to pass it into other commands).

--- a/tmux.1
+++ b/tmux.1
@@ -1097,7 +1097,7 @@ except the window at
 is moved to
 .Ar dst-window .
 .It Xo Ic new-window
-.Op Fl adk
+.Op Fl adkP
 .Op Fl n Ar window-name
 .Op Fl t Ar target-window
 .Op Ar shell-command
@@ -1145,6 +1145,10 @@ New windows will automatically have
 .Dq TERM=screen
 added to their environment, but care must be taken not to reset this in shell
 start-up files.
+.Pp
+The
+.Fl P
+option prints the location of the new window after it has been created.
 .It Ic next-layout Op Fl t Ar target-window
 .D1 (alias: Ic nextl )
 Move a window to the next layout and rearrange the panes to fit.
@@ -1281,7 +1285,7 @@ target pane is used.
 Select the window at
 .Ar target-window .
 .It Xo Ic split-window
-.Op Fl dhv
+.Op Fl dhvP
 .Oo Fl l
 .Ar size |
 .Fl p Ar percentage Oc
